# text-to-ssml

./: CHANGELOG.md  Cargo.toml  README.md  circle.yml
src/: errors.rs  lib.rs  parser.rs  xml_writer.rs
src/ssml_constants/: mod.rs
tests/: lib_test.rs
