[package]
name = "text-to-polly-ssml"
description = "Converts text to polly SSML. Using a bad format."
version = "0.3.0"
authors = ["Eric <ecoan@instructure.com>"]
license = "MIT"
homepage = "https://github.com/SecurityInsanity/text-to-polly-ssml"
repository = "https://github.com/SecurityInsanity/text-to-polly-ssml"

[dependencies]
error-chain = "0.10"
nom = "3.0.0"
quick-xml = "0.7.3"
